bai tap form don gian

--- a/3.Form_table/baitapformdongian.html
+++ b/3.Form_table/baitapformdongian.html
@@ -73,7 +73,7 @@
         </tr>
         <tr>
             <td style="color: blue">Địa chỉ</td>
-            <td><input type="text" name="address" placeholder="Nhập vào đây"></td>
+            <td><textarea name="address" placeholder="Nhập vào đây" cols="30" rows="8"></textarea> </td>
         </tr>
         <tr>
             <td style="color: blue">Lớp</td>
