--- a/3.Form_table/formsurvey.html
+++ b/3.Form_table/formsurvey.html
@@ -5,30 +5,98 @@
     <title>survey</title>
 </head>
 <body>
-<form>
+<form method="post" action="https://www.google.com.vn/?hl=vi">
 <h2>Market Research Survey</h2>
 <p>Please take a few moments to complete this satisfaction survey.</p>
 <h4>What is your age range?</h4>
 <select>
-    <option>13-17</option>
+    <option>13-17 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
     <option>18-24</option>
     <option>25-30</option>
     <option>31<sup>+</sup></option>
 </select>
 <h4>What is your yearly income range?</h4>
 <select>
-    <option>$0-$25,000</option>
+    <option>$0-$25,000&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
     <option>$25000<sup>+</sup></option>
 </select>
 <h4>Gender</h4>
     <table>
         <tr>
-            <td><input type="radio" name="gender" value="Nam"></td>
+            <td><input type="radio" name="gender" value="gender">Male</td>
         </tr>
         <tr>
-            <td><input type="radio" name="gender" value="Nữ"></td>
+            <td><input type="radio" name="gender" value="gender">Female</td>
         </tr>
     </table>
+
+    <h4>Which of the following products have your purchased in the last 2 months. Please check all that apply</h4>
+    <label><input type="checkbox" name="purchased">&nbsp;&nbsp;Product 1</label>
+    <br><label><input type="checkbox" name="purchased">&nbsp;&nbsp;Product 2</label>
+    <br><label><input type="checkbox" name="purchased">&nbsp;&nbsp;Product 3</label>
+
+    <h4>How often would you use our new products?</h4>
+    <table>
+        <tr>
+            <td><label></label><input type="radio" name="use">&nbsp;&nbsp;Daily</label></td>
+        </tr>
+        <tr>
+            <td><label><input type="radio" name="use">&nbsp;&nbsp;Weekly</label></td>
+        </tr>
+        <tr>
+            <td><label><input type="radio" name="use">&nbsp;&nbsp;Monthly</label></td>
+        </tr>
+    </table>
+    <h4>What would you pay for the new product?</h4>
+    <table>
+        <tr>
+            <td>$</td>
+            <td><input type="text" name="dollar"></td>
+            <td>.</td>
+            <td><input type="text" name="cent"></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>Dollars</td>
+            <td></td>
+            <td>Cents</td>
+        </tr>
+
+    </table>
+    <h4>What features would you like to see in the new product.</h4>
+    <p><textarea name="newfeature" cols="50" rows="10" placeholder="Input here"></textarea> </p>
+    <p>Please rate your level of agreement with the following statements.</p>
+    <table border="1">
+        <tr>
+            <td></td>
+            <td>Strongly Disagree</td>
+            <td>Disagree</td>
+            <td>Agree</td>
+            <td>Strongly Agree</td>
+        </tr>
+        <tr style="text-align: center">
+            <td><strong>Our products are priced fairly.</strong></td>
+            <td><input type="radio" name="radio1"><br>1</td>
+            <td><input type="radio" name="radio1"><br>2</td>
+            <td><input type="radio" name="radio1"><br>3</td>
+            <td><input type="radio" name="radio1"><br>4</td>
+        </tr>
+        <tr style="text-align: center;">
+            <td><strong>Our products are high quality.</strong></td>
+            <td><input type="radio" name="radio2"><br>1</td>
+            <td><input type="radio" name="radio2"><br>2</td>
+            <td><input type="radio" name="radio2"><br>3</td>
+            <td><input type="radio" name="radio2"><br>4</td>
+        </tr>
+        <tr style="text-align: center;">
+            <td><strong>You would recommend our product to a friend or coworker.</strong></td>
+            <td><input type="radio" name="radio3"><br>1</td>
+            <td><input type="radio" name="radio3"><br>2</td>
+            <td><input type="radio" name="radio3"><br>3</td>
+            <td><input type="radio" name="radio3"><br>4</td>
+        </tr>
+    </table>
+    <input type="submit" name="submit" value="Submit">
 </form>
 </body>
 </html>
