bài tập luyện tập cấu trúc điều kiện 01

--- a/5.cautrucdieukien/BTChisoCannag.html
+++ b/5.cautrucdieukien/BTChisoCannag.html
@@ -11,7 +11,7 @@
     let height = +prompt('Nhập chièu cao của bạn theo mét');
     let weight = +prompt('Nhập cân nặng của bạn theo kg')
     let result = weight/(height*height)
-    result<18.5? alert('Overweight'):
+    result<18.5? alert('skinny'):
                 result<25? alert('Normal') :
                     result<30? alert('Overweight'): alert('Obese')
 </script>
