--- a/8.function/function_BT/LuyentapTaovaSudungfunction01/functionluyentap01bai05.html
+++ b/8.function/function_BT/LuyentapTaovaSudungfunction01/functionluyentap01bai05.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tìm chòm sao</title>
 </head>
 <body>
 <script>
