--- a/8.function/function_BT/LuyentapTaovaSudungfunction02/function_luyentap02_bai01.html
+++ b/8.function/function_BT/LuyentapTaovaSudungfunction02/function_luyentap02_bai01.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tính bình phương</title>
 </head>
 <body>
-
+<script>
+    let numbers = +prompt('Nhập số cần tính bình phương?');
+</script>
 </body>
+<script>
+    function multiple(a) {
+        let b;
+        b = a * a;
+        alert(b)
+    }
+
+    multiple(numbers);
+</script>
 </html>
